<resources>
    <string name="app_name">DineEasy</string>
    <string name="date_time_select_hint">Sélectionner une date</string>
    <string name="calender_icon_des">Icône calendrier</string>
    <string name="date">Date</string>
    <string name="name_hint">Nom et prénom du réservant</string>
    <string name="fullName">Nom et Prénom </string>
    <string name="email">e-mail</string>
    <string name="email_hint">e-mail du réseravant</string>
    <string name="phone">Numéro du téléphone</string>
    <string name="numberOfGuests">Nombre de personnes </string>
    <string name="special_requests">Demandes spéciales</string>
    <string name="table_near_window">Table à côté de la fenêtre</string>
    <string name="vegetarian">Régime végétarien</string>
    <string name="other">Autres demandes</string>
    <string name="specify_request">Veuillezs spécifier votre demande</string>
    <string name="reserve">Réserver</string>
    <string name="cancel">Annuler</string>
    <string name="enter_number_of_guests">Saisir nombre de personnes</string>
    <string name="more">Plus</string>
    <string name="reservation_form">Formulaire de réservation</string>
    <string name="confirmation_reservation">Confirmation de la réservation</string>
    <string name="consultation_reservation">Détails de réservation</string>
    <string name="confirmation_text">Merci %s pour votre réservation\nVous recevrez bientôt un email de confirmation</string>
    <string name="consultation_text">Bienvenue %s \nLes détails de votre réservation sont listés ci-dessous</string>
    <string name="star_requeried">*</string>
    <string name="review">Laisser un avis</string>
    <string name="reviews">Avis</string>
    <string name="reservation_number">Numéro de réservation</string>
    <string name="contact_email">Email de contact</string>
    <string name="contact_phone">Télephone de contact</string>
    <string name="search_by_reservationNumber">Recherche par N° de Réservation</string>
    <string name="entrez_reservation_Number">Entrez votre N° de réservation</string>
    <string name="search">Rechercher</string>
    <string name="explore_restaurants">Explorer les restaurants</string>
    <string name="see_reservation_details">Voir ma réservation</string>
    <string name="details">details</string>
    <string name="leave_review">Laisser un avis</string>
    <string name="leave_comment">Écrivez votre avis</string>
    <string name="add_photos">Ajouter des photos</string>
    <string name="send_review">Envoyer l\'avis</string>
    <string name="rating_review">Quelle note donneriez-vous à votre expérience ?</string>
    <string name="review_title">Donnez un titre à votre avis</string>
    <string name="et_review_title">titre d\'avis</string>
    <string name="review_comment">Laissez un commentaire</string>
    <string name="et_review_comment">commentaire</string>
    <string name="review_name">Sur quelle nom vous voulez enregistrer l\'avis ?</string>
    <string name="et_review_name">"Votre nom "</string>
    <string name="ok">OK</string>
    <string name="try_again">réessayer</string>
    <string name="restaurant_photos">Photos</string>
    <string name="restaurant_no_web_Site"> Cet établissement n\'a pas de site internet</string>
    <string name="closed" > Fermé </string>
    <string name="open" > Ouvert </string>
    <string name="serves_vegeterian" > Cet établissement propose des options végéteriennes  </string>
    <string name="serves_no_vegeterian" > Cet établissement ne propose pas des options végéteriennes  </string>
    <string name="hint_location"> E.g. Montmartre Paris </string>
    <string name="hint_type_cuisine"> italien </string>
    <string name="filter_vegan"> vegan </string>
    <string name="filter_vegeterian"> Végétarien </string>
    <string name="budget"> Budget </string>
    <string name="slider_description" > Sélecteur de budget , ajustez le montant </string>
</resources>