<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="32dp">

            <LinearLayout
                android:id="@+id/review_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_rate_experience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_review"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="16dp"
                    android:gravity="start"/>

                <LinearLayout
                    android:id="@+id/ll_stars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="16dp">

                    <ImageView
                        android:id="@+id/star1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/empty_star_icon"
                        android:contentDescription="Star 1"
                        android:layout_marginEnd="5dp"/>

                    <ImageView
                        android:id="@+id/star2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/empty_star_icon"
                        android:contentDescription="Star 2"
                        android:layout_marginEnd="5dp"/>

                    <ImageView
                        android:id="@+id/star3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/empty_star_icon"
                        android:contentDescription="Star 3"
                        android:layout_marginEnd="5dp"/>

                    <ImageView
                        android:id="@+id/star4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/empty_star_icon"
                        android:contentDescription="Star 4"
                        android:layout_marginEnd="5dp"/>

                    <ImageView
                        android:id="@+id/star5"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/empty_star_icon"
                        android:contentDescription="Star 5"
                        android:layout_marginEnd="5dp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/review_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="start"/>

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/et_review_name"
                    android:layout_marginBottom="10dp"
                    android:gravity="top|start"/>
                <TextView
                    android:id="@+id/tv_title_experience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/review_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="4dp"
                    android:gravity="start"/>

                <EditText
                    android:id="@+id/edit_review_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_review_title"
                    android:inputType="text"
                    android:layout_marginBottom="10dp"
                    android:gravity="top|start"/>

                <TextView
                    android:id="@+id/tv_comment_experience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/review_comment"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="4dp"
                    android:gravity="start"/>

                <EditText
                    android:id="@+id/edit_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_review_comment"
                    android:inputType="textMultiLine"
                    android:minHeight="50dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="top|start"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <ImageView
                        android:id="@+id/btn_add_photo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/baseline_add_a_photo_24"
                        android:layout_centerInParent="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_centerHorizontal="true" />
                </RelativeLayout>

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/photo_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:flexWrap="wrap"
                    app:justifyContent="flex_start"/>

                <Button
                    android:id="@+id/btn_submit_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_review"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/orange_Corail"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_leave_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/orange_Corail"
                android:text="@string/leave_review" />

            <LinearLayout
                android:id="@+id/review_list_container"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginTop="20dp">

                <!-- RecyclerView pour afficher les avis -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reviewsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <TextureView
        android:id="@+id/texture_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
    <ImageView
        android:id="@+id/btn_capture"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="32dp"
        android:src="@drawable/baseline_circle_24"
        android:elevation="8dp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/img_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:visibility="gone"
        android:background="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_original"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Original"
            android:layout_margin="8dp"
            android:visibility="gone"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_grayscale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Grayscale"
            android:layout_margin="8dp"
            android:visibility="gone"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_sepia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sepia"
            android:layout_margin="8dp"
            android:visibility="gone"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="570dp"
        android:gravity="bottom|center_horizontal">

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:layout_marginEnd="16dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_try"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:visibility="gone"/>
    </LinearLayout>

</FrameLayout>
