<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintHeight_percent="0.5"
        >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="186dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/home_page_logo"  />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/orange_Corail"
        android:textSize="48sp"
        android:textStyle="bold|normal" />

    <Button
        android:id="@+id/button"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/orange_Corail"
        android:onClick="homeActivity"
        android:text="@string/explore_restaurants"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:rippleColor="@color/orange_Corail" />

    <Button
        android:id="@+id/button2"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/orange_Corail"
        android:onClick="ConsultationActivity"
        android:text="@string/see_reservation_details"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:rippleColor="@color/orange_Corail" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
